[package]
name = "lnx-vfs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tracing = "0.1"
arc-swap = "1"
crossbeam-channel = "0.5"
i2o2 = "0.4"
offset-allocator = "0.2"
papaya = "0.2"
lz4_flex = "0.11"
fastrand = "2.3"
humansize = "2.1"
crc32fast = "1.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
ahash = "0.8"
cityhasher = "0.1"
rkyv = "0.8"
parking_lot = "0.12"
libc = "0.2"
smallvec = "1"
stable_deref_trait = "1"

# Encryption at rest
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"

tokio = { version = "1", features = ["rt", "time", "sync"] }
moka = { version = "0.12", features = ["sync"] }
memmap2 = { git = "https://github.com/lnx-search/memmap2-rs.git", rev = "b4e936e" }


[dev-dependencies]
rstest = "0.26"
tracing-subscriber = "0.3"
tempfile = "3"

fail = { version = "0.5", features = ["failpoints"] }
i2o2 = { version = "0.4", features = ["fail"] }
tokio = { version = "1", features = ["full"] }

[features]
# Enables huge page allocation tests within the cache.
test-huge-pages = []
# Enable miri tests (and disables the rest.)
test-miri = []
# INTERNAL ONLY: used for enabling benchmarks
bench-lib-unstable = []