[package]
name = "lnx-vfs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tracing = "0.1"
arc-swap = "1"
crossbeam-channel = "0.5"
i2o2 = "0.4"
offset-allocator = "0.2"
papaya = "0.2"
lz4_flex = "0.11"
rand = "0.9"
humansize = "2.1"
crc32fast = "1.4"
serde = "1"
serde_derive = "1"
rmp-serde = "1"
rkyv = "0.8"
libc = "0.2"
smallvec = "1"
stable_deref_trait = "1"
hex = "0.4"
foldhash = "0.2"

# Encryption at rest
chacha20poly1305 = "0.10"
blake3 = "1"
argon2 = "0.5"

tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
moka = { version = "0.12", features = ["sync"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
memmap2 = { git = "https://github.com/lnx-search/memmap2-rs.git", rev = "b4e936e" }


[dev-dependencies]
rstest = "0.26"
tracing-subscriber = "0.3"
tempfile = "3"
fastrand = "2.3"
anyhow = "1"
divan = "0.1"

fail = { version = "0.5", features = ["failpoints"] }
i2o2 = { version = "0.4", features = ["fail"] }
tokio = { version = "1", features = ["full"] }

[features]
# Enables huge page allocation tests within the cache.
test-huge-pages = []
# Enable miri tests (and disables the rest.)
test-miri = []
# INTERNAL ONLY: used for enabling benchmarks
bench-lib-unstable = ["bench-internal"]
# INTERNAL ONLY: used for enabling some internal e2e benchmarks
bench-internal = []

[profile.bench]
debug = true

[[bench]]
name = "cache_writes_cold"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "cache_reads_hot"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "vfs_single_writes"
harness = false

[[bench]]
name = "disk_allocator"
harness = false
